css/portfolio.css
.main {
  min-height: 80vh;
}

body {
  background: url(ignasi_pattern_s.png);
}

.navbar-logo {
  background-color: #4aaaa5;
  color: white !important;
  font-family: Georgia, Times, "Times New Roman", serif;
  font-size: 24px;
  font-weight: bold;
  padding: 10px 15px;
}

.navbar-custom {
  padding-top: 0;
  padding-bottom: 0;
}

.navlink-custom {
  color: #777 !important;
  font-family: Arial, Helvetica, sans-serif !important;
  font-size: 14px !important;
  font-weight: 400 !important;
  padding: 15px !important;
}

.portfolio-section {
  background-color: #fff;
  padding: 20px;
  margin-top: 32px;
}

.portfolio-section-title {
  font-size: 30px;
  font-family: Georgia, "Times New Roman", Times, serif;
  padding-bottom: 20px;
  font-weight: 700;
  color: #4aaaa5;
}

.hobbies {
  display: flex;
  flex-wrap: wrap;
}

.hobby {
  position: relative;
  flex: 50%;
  margin: 10px;
}

.hobby-img {
  width: 100%;
}

.hobby-title {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* max-width: 275px; */
  font-weight: 300;
  padding: 15px;
  color: #fff;
  background-color: #4aaaa5;
  font-size: 22px;
  text-align: center;
  font-family: Georgia, "Times New Roman", Times, serif;
}

.image {
  width: 55px;
  height: 55px;
  padding-left: 5px;
}

.connect-section {
  background: #fff;
  padding: 30px 30px 43px;
  margin-top: 32px;
}

.connect-section-title {
  font-family: Georgia, "Times New Roman", Times, serif;
  font-size: 25px;
  font-weight: bold;
  color: #4aaaa5;
}

.footer {
  width: 100%;
  margin-top: 40px;
}

.footer-para {
  background-color: #777;
  color: #fff;
  padding: 40px;
  text-align: center;
  margin-bottom: 0;
  border-top: 6px solid #4aaaa5;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
}

